--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.3.0",
     "nuxt": "^3.16.0",
+    "sitemap": "^8.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@nuxt/content": "^3.3.0",
+    "@nuxt/typescript-build": "^3.0.2",
+    "typescript": "^5.8.2",
+    "vue-tsc": "^2.2.8"
   }
 }
