--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^7.2.7",
     "nuxt": "^3.16.0",
     "sitemap": "^8.0.0",
     "vue": "^3.5.13",
@@ -18,6 +19,9 @@
   "devDependencies": {
     "@nuxt/content": "^3.3.0",
     "@nuxt/typescript-build": "^3.0.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.8.2",
     "vue-tsc": "^2.2.8"
   }
