--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nuxt": "^3.16.0",
     "sitemap": "^8.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "rollup": "^3.29.4"
   },
   "devDependencies": {
     "@nuxt/content": "^3.3.0",
