refactoring and added content

--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.11.0",
     "@nuxtjs/sitemap": "^7.2.7",
+    "dayjs-nuxt": "^2.1.11",
     "nuxt": "^3.16.0",
+    "nuxt-time": "^1.0.3",
     "sitemap": "^8.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
