--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   "dependencies": {
     "@nuxt/icon": "^1.11.0",
     "@nuxtjs/sitemap": "^7.2.7",
+    "@rehype-pretty/transformers": "^0.13.2",
     "dayjs-nuxt": "^2.1.11",
     "nuxt": "^3.16.0",
     "nuxt-time": "^1.0.3",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.1",
+    "rollup": "^3.29.4",
     "sitemap": "^8.0.0",
+    "unist-util-visit": "^5.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "rollup": "^3.29.4"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@nuxt/content": "^3.3.0",
     "@nuxt/typescript-build": "^3.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.47",
+    "sass-embedded": "^1.86.0",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.8.2",
     "vue-tsc": "^2.2.8"
