--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dayjs-nuxt": "^2.1.11",
     "nuxt": "^3.16.0",
     "nuxt-time": "^1.0.3",
+    "rehype-highlight": "^7.0.2",
+    "rehype-highlight-code-lines": "^1.1.3",
     "remark-gfm": "^4.0.1",
     "remark-rehype": "^11.1.1",
     "rollup": "^4.37.0",
