--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "remark-rehype": "^11.1.1",
     "rollup": "^4.37.0",
     "sitemap": "^8.0.0",
+    "tslint": "^5.20.1",
     "unist-util-visit": "^5.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@nuxt/content": "^3.3.0",
+    "@nuxt/eslint": "^1.3.0",
     "@nuxt/typescript-build": "^3.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.47",
