--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": ["node_modules", ".nuxt", "dist", "eslint.config.mjs"]
 }
