--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["node_modules", ".nuxt", "dist", "eslint.config.mjs"]
+  "exclude": ["eslint.config.mjs"]
 }
