--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-    "redirects": [
-        {
-        "source": "/:path*",
-        "destination": "https://thommywestlund.se",
-        "permanent": false
-        }
-    ]
+  "redirects": [
+    {
+      "source": ":path*",
+      "destination": "https://thommywestlund.se",
+      "permanent": false
+    },
+
+    {
+      "source": "/",
+      "destination": "https://thommywestlund.se",
+      "permanent": false
+    }
+  ]
 }
